Added add-opens back to config