@@ -56,7 +56,12 @@ application {
 }
 
 ext {
-    mmJvmOptions = ['-Xmx2048m', '-Dsun.awt.disablegrab=true']
+    mmJvmOptions = [
+        '-Xmx2048m',
+        '--add-opens java.base/java.util=ALL-UNNAMED',
+        '--add-opens java.base/java.util.concurrent=ALL-UNNAMED',
+        '-Dsun.awt.disablegrab=true'
+    ]
     data = 'data'
     unitFiles = "${data}/mechfiles"
     rats = "${data}/rat"
